--- a/fTelnetProxy.csproj
+++ b/fTelnetProxy.csproj
@@ -52,8 +52,8 @@
     <Compile Include="ProjectInstaller.Designer.cs">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
-    <Compile Include="ProxyClientThread.cs" />
-    <Compile Include="ProxyServerThread.cs" />
+    <Compile Include="WebSocketClientThread.cs" />
+    <Compile Include="WebSocketServerThread.cs" />
     <Compile Include="Service.cs">
       <SubType>Component</SubType>
     </Compile>
