Handle command-line parameters like FleckProxy Log using streams

--- a/fTelnetProxy.csproj
+++ b/fTelnetProxy.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
     <Compile Include="fTelnetProxy.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
