--- a/relay.cfg
+++ b/relay.cfg
@@ -9,6 +9,7 @@ hotwirebbs.kicks-ass.net:6502
 igs.joyjoy.net:6969
 iniq.hopto.org:2323
 metalshopbbs.com:2000
+momiabbs.no-ip.info:2002
 mvbbs.dyndns.org:6401
 nolacarrier.com:504
 otherworldbbs.dyndns.org:6502
