Add more info to README

--- a/relay.cfg
+++ b/relay.cfg
@@ -10,6 +10,7 @@ igs.joyjoy.net:6969
 iniq.hopto.org:2323
 metalshopbbs.com:2000
 momiabbs.no-ip.info:2002
+mtrek.com:1701
 mvbbs.dyndns.org:6401
 nolacarrier.com:504
 otherworldbbs.dyndns.org:6502
