Move processing out of server thread and into client thread...hopefully this will resolve the hung proxies

--- a/relay.cfg
+++ b/relay.cfg
@@ -2,20 +2,26 @@
 azlab.ddns.net:6510
 bbs.nitemarecafe.com:2002
 bbs.thenet.gen.nz:2323
+bbs.thenexusbbs.com:2002
 bbs.thenexusbbs.com:31337
+bcrgames.com:31337
+bsbbs.com.br:2323
 carriersync2.thruhere.net:6912
 digitaldial.homeunix.com:2300
 dsbbs.net:2323
+forgottenkingdoms.org:80
 frankbbs.darktech.org:2323
 hotwirebbs.kicks-ass.net:6502
 igs.joyjoy.net:6969
 iniq.hopto.org:2323
+mekcity.com:3067
 metalshopbbs.com:2000
 momiabbs.no-ip.info:2002
 mtrek.com:1701
 mvbbs.dyndns.org:6401
 nolacarrier.com:504
 otherworldbbs.dyndns.org:6502
+queerandloathing.com:2323
 quinn.servebbs.org:2323
 retrograde.dyndns.org:6502
 rustycraft.sytes.net:4206
