Make relay not case sensitive

--- a/relay.cfg
+++ b/relay.cfg
@@ -9,6 +9,8 @@ bsbbs.com.br:2323
 carriersync2.thruhere.net:6912
 digitaldial.homeunix.com:2300
 dsbbs.net:2323
+error404bbs.com:404
+error404bbs.ddns.net:404
 forgottenkingdoms.org:80
 frankbbs.darktech.org:2323
 hotwirebbs.kicks-ass.net:6502
