Don't try to dual-stack on Win2k3

--- a/relay.cfg
+++ b/relay.cfg
@@ -20,10 +20,12 @@ mekcity.com:3067
 metalshopbbs.com:2000
 momiabbs.no-ip.info:2002
 mtrek.com:1701
+mud.languiddreams.net:6670
 mvbbs.dyndns.org:6401
 nolacarrier.com:504
 otherworldbbs.dyndns.org:6502
 queerandloathing.com:2323
+queerandloathing.com:8888
 quinn.servebbs.org:2323
 retrograde.dyndns.org:6502
 rustycraft.sytes.net:4206
