Fix problem where client connection wasn't closed on server disconnect

--- a/relay.cfg
+++ b/relay.cfg
@@ -1,5 +1,6 @@
 ﻿23,513,6400
 azlab.ddns.net:6510
+baudgirl.ddns.net:2300
 bbs.nitemarecafe.com:2002
 bbs.thenet.gen.nz:2323
 bbs.thenexusbbs.com:2002
@@ -29,5 +30,6 @@ queerandloathing.com:8888
 quinn.servebbs.org:2323
 retrograde.dyndns.org:6502
 rustycraft.sytes.net:4206
+soznet.net:2123
 wildcat.dynu.com:2300
 wildcat.dynu.com:2310
