--- a/relay.cfg
+++ b/relay.cfg
@@ -1,10 +1,13 @@
 ﻿23,513,6400
 azlab.ddns.net:6510
+baudgirl.com:2300
 baudgirl.ddns.net:2300
 bbs.nitemarecafe.com:2002
 bbs.thenet.gen.nz:2323
 bbs.thenexusbbs.com:2002
 bbs.thenexusbbs.com:31337
+bbs.vaporsnail.com:1123
+bbs1.tonyuk.online:2424
 bcrgames.com:31337
 bsbbs.com.br:2323
 carriersync2.thruhere.net:6912
@@ -17,6 +20,9 @@ frankbbs.darktech.org:2323
 hotwirebbs.kicks-ass.net:6502
 igs.joyjoy.net:6969
 iniq.hopto.org:2323
+lightningbbs.com:2400
+lightningbbs.com:2401
+mbse.laserbbs.co.uk:2323
 mekcity.com:3067
 metalshopbbs.com:2000
 momiabbs.no-ip.info:2002
@@ -31,5 +37,6 @@ quinn.servebbs.org:2323
 retrograde.dyndns.org:6502
 rustycraft.sytes.net:4206
 soznet.net:2123
+stateoftheark.ca:1990
 wildcat.dynu.com:2300
 wildcat.dynu.com:2310
