Update "for security reasons..." message so people know what to do when they see it

--- a/relay.cfg
+++ b/relay.cfg
@@ -1,28 +1,30 @@
-﻿23,513,6400
+﻿23,513,2300,2323,6400
 azlab.ddns.net:6510
 baudgirl.com:2300
 baudgirl.ddns.net:2300
+bbs.gapbbs.us:5023
 bbs.nitemarecafe.com:2002
-bbs.thenet.gen.nz:2323
+bbs.techware2k.com:24
 bbs.thenexusbbs.com:2002
 bbs.thenexusbbs.com:31337
+bbs.valhallabbs.com:24
+bbs.valhallabbs.com:5023
 bbs.vaporsnail.com:1123
 bbs1.tonyuk.online:2424
+bc.kelotz.net:2018
 bcrgames.com:31337
-bsbbs.com.br:2323
 carriersync2.thruhere.net:6912
+cmrk.net:1986
+cmrk.net:2113
 digitaldial.homeunix.com:2300
-dsbbs.net:2323
+encom.cloudns.org:1982
 error404bbs.com:404
 error404bbs.ddns.net:404
 forgottenkingdoms.org:80
-frankbbs.darktech.org:2323
 hotwirebbs.kicks-ass.net:6502
 igs.joyjoy.net:6969
-iniq.hopto.org:2323
 lightningbbs.com:2400
 lightningbbs.com:2401
-mbse.laserbbs.co.uk:2323
 mekcity.com:3067
 metalshopbbs.com:2000
 momiabbs.no-ip.info:2002
@@ -30,13 +32,16 @@ mtrek.com:1701
 mud.languiddreams.net:6670
 mvbbs.dyndns.org:6401
 nolacarrier.com:504
+orbitbbs.ddns.net:7210
 otherworldbbs.dyndns.org:6502
-queerandloathing.com:2323
 queerandloathing.com:8888
-quinn.servebbs.org:2323
 retrograde.dyndns.org:6502
 rustycraft.sytes.net:4206
+sanctuary.zapto.org:1541
 soznet.net:2123
 stateoftheark.ca:1990
+tinysbbs.com:2023
+vintagebbsing.com:8888
 wildcat.dynu.com:2300
 wildcat.dynu.com:2310
+wtlord.lightningbbs.com:57600
