Update to .net 4.5 for tls 1.1 and 1.2 support

--- a/relay.cfg
+++ b/relay.cfg
@@ -1,47 +1,205 @@
 ﻿23,513,2300,2323,6400
+13leader.net:8023
+2ndchoicecore.nz:1024
+68.56.176.236:8623
+69.51.83.193:1691
+9640news.ddns.net:9640
+a80sappleiibbs.ddns.net:6502
+absinthebbs.net:1940
+acentauribbs.no-ip.org:2002
+ah-bbs.com:2335
+alco.bbs.io:2023
+altairbiz.ddns.net:8888
+altairbiz.dns.net:2323
+altairbiz.hopto.org:2222
+altairbiz.hopto.org:2323
+altairbiz.hopto.org:8383
+altairbiz.hopto.org:8888
+amigahouse.heightspc.net:6505
+amstrad.simulant.uk:464
+amstrad.simulant.uk:664
+andr01d.zapto.org:9999
+archive.prodata-net.com:2322
+atl.ddns.net:6401
 azlab.ddns.net:6510
+bardbbs.belthesar.com:25023
+basementbbs.ddns.net:9000
 baudgirl.com:2300
 baudgirl.ddns.net:2300
+bbs.bottomlessabyss.net:2023
+bbs.dmine.net:24
+bbs.docsplace.org:26
+bbs.doszombie.com:9000
+bbs.doszombie.com:9010
+bbs.f4fbbs.com:62323
 bbs.gapbbs.us:5023
+bbs.greyfuzz.com:1023
+bbs.hoyvision.com:6402
+bbs.keeblers.org:8888
+bbs.micronick.com:1123
+bbs.mywire.org:26
+bbs.mywire.org:2400
 bbs.nitemarecafe.com:2002
+bbs.outpostbbs.net:2304
+bbs.outpostbbs.net:10123
+bbs.razorsdomain.com:23230
+bbs.razorsdomain.com:31415
+bbs.riddells.net:10023
+bbs.ruge.ws:2223
+bbs.sysop.se:8888
+bbs.tabakov.net:13023
 bbs.techware2k.com:24
+bbs.thenet.gen.nz:2324
 bbs.thenexusbbs.com:2002
 bbs.thenexusbbs.com:31337
+bbs.thewelborns.net:28
 bbs.valhallabbs.com:24
 bbs.valhallabbs.com:5023
 bbs.vaporsnail.com:1123
+bbs.vdrive.ca:8023
+bbs.wccastle.net:2424
 bbs1.tonyuk.online:2424
+bc.kelotz.net:1981
+bc.kelotz.net:1985
+bc.kelotz.net:1989
+bc.kelotz.net:2003
+bc.kelotz.net:2004
+bc.kelotz.net:2005
+bc.kelotz.net:2007
+bc.kelotz.net:2008
 bc.kelotz.net:2018
+bc.kelotz.net:2223
+bc.kelotz.net:2224
+bc.kelotz.net:2225
 bcrgames.com:31337
+blackflag.acid.org:28
+blacklodgeresearch.org:4023
+bnsbbs.ddns.net:23000
+cardandclaw.servebbs.com:8888
 carriersync2.thruhere.net:6912
+carrionfields.net:4449
+catch22.zapto.org:26
+chinwag.leenooks.net:10023
+chq.ddns.net:2023
+cib.dyndns.org:6405
+cib.dyndns.org:6407
 cmrk.net:1986
 cmrk.net:2113
+cnetbbs.dynu.net:1940
+compufuck.xyz:2324
+cqbbs.ddne.net:6502
+cqbbs.ddns.net:6502
+cuba.bbs.io:2023
+dangerbaybbs.dyndns.org:1337
 digitaldial.homeunix.com:2300
+down-under.net:2003
+dura-bbs.net:6359
 encom.cloudns.org:1982
+error1202bbs.ddns.net:1202
+error1202bbs.ddns.net:8080
 error404bbs.com:404
 error404bbs.ddns.net:404
+error404bbs.ddns.net:8080
+error404bbs.com:1202
+error404bbs.com:8080
+everdark.org:3000
+fishingnet.phatstar.org:7777
 forgottenkingdoms.org:80
+frontierbbs.net:2023
+frontierbbs.net:2333
+frontierbbs.net:3333
+frontierbbs.net:8888
+fusen.ddns.net:55223
+fusionbbs.ddns.net:9640
+fw2.cnetbbs.net:6800
+grepper.net:6464
+gusto-bbs.com:2023
+ham.agvnet.com.ar:8011
+ham.agvnet.com.ar:8040
+ham.agvnet.com.ar:8045
+Heatwave.ddns.net:9640
+heightsbbs.heightspc.net:6860
 hotwirebbs.kicks-ass.net:6502
 igs.joyjoy.net:6969
+jayctheriot.com:6400
+jayctheriot.com:6401
+jayctheriot.com:6402
+jayctheriot.com:6403
+jayctheriot.com:6404
+jayctheriot.com:6405
+k3chb.chickenkiller.com:8010
+konvolut.serveblog.net:1234
+lambda.moo.mud.org:8888
 lightningbbs.com:2400
 lightningbbs.com:2401
+furmenservices.net:23232
+furmenservices.net:23322
+madaraszd.net:4321
+mc15.fadehost.com:11001
+mc15.fadehost.com:11002
 mekcity.com:3067
 metalshopbbs.com:2000
+middleearth.net:4739
+miser.jmr.is:1666
+moenuts.net:2007
 momiabbs.no-ip.info:2002
 mtrek.com:1701
 mud.languiddreams.net:6670
+munk.mynetgear.com:1234
+mutinybbs.com:2332
 mvbbs.dyndns.org:6401
+mysticpibbs.ddns.net:53412
+mysticpibbs.ddns.net:53417
+mysticpibbs.ddns.net:53419
+night-runners.org:2474
 nolacarrier.com:504
 orbitbbs.ddns.net:7210
 otherworldbbs.dyndns.org:6502
+paladium.servebbs.com:20
+panel.mcbf.pw:11001
+panel.mcbf.pw:11002
+pc.cnet128.com:6405
+pbmystic.rdfig.net:24
+perceptronica.duckdns.org:10100
+perceptronica.duckdns.org:10052
+picovebbs.com:6860
+prahy.mmh.cz:3333
 queerandloathing.com:8888
+retro-bar.net:1981
 retrograde.dyndns.org:6502
+retrounderground.org:1337
+rhostdev.mushpark.com:4201
 rustycraft.sytes.net:4206
 sanctuary.zapto.org:1541
+sandwich.hopto.org:2023
+sbbs.dynu.net:2025
+scbbs.nsupdate.info:50023
+selonia.com:2023
+selonia.com:2513
+selonia.zapto.org:2023
+shell-matrix.net:2223
+shodanscore.com:11235
+sirionbbs.suphammer.net:9023
 soznet.net:2123
+splat.duia.us:333
 stateoftheark.ca:1990
+stormwolftech.sytes.net:4020
+strontium90.net:8888
+teaghlach.eu:4400
+teaghlach.eu:6665
+tel.houseofbaud.com:8888
+thunder-storm.ca:10023
 tinysbbs.com:2023
+tinysbbs.com:3023
+tsali.ddns.net:9023
+tw.spleck.net:2002
+tzone.ddns.net:5000
+vintagebbsing.com:1337
 vintagebbsing.com:8888
 wildcat.dynu.com:2300
 wildcat.dynu.com:2310
+wildsau.luxh.at:81
+wn2.duckdns.org:6407
+wn2.duckdns.org:6408
 wtlord.lightningbbs.com:57600
+www.charliecamilleri.xyz:6666
