--- a/relay.cfg
+++ b/relay.cfg
@@ -1,5 +1,7 @@
 ﻿23,513,2300,2323,6400
 13leader.net:8023
+162.243.24.4:4040
+174.138.109.194:4040
 2ndchoicecore.nz:1024
 68.56.176.236:8623
 69.51.83.193:1691
@@ -27,6 +29,7 @@ basementbbs.ddns.net:9000
 baudgirl.com:2300
 baudgirl.ddns.net:2300
 bbs.bottomlessabyss.net:2023
+bbs.darksoulscrew.tk:1123
 bbs.dmine.net:24
 bbs.docsplace.org:26
 bbs.doszombie.com:9000
@@ -117,6 +120,7 @@ gusto-bbs.com:2023
 ham.agvnet.com.ar:8011
 ham.agvnet.com.ar:8040
 ham.agvnet.com.ar:8045
+HB1BBS.NET:8010
 Heatwave.ddns.net:9640
 heightsbbs.heightspc.net:6860
 hotwirebbs.kicks-ass.net:6502
@@ -155,6 +159,7 @@ night-runners.org:2474
 nolacarrier.com:504
 orbitbbs.ddns.net:7210
 otherworldbbs.dyndns.org:6502
+packet.w4bfb.org:2333
 paladium.servebbs.com:20
 panel.mcbf.pw:11001
 panel.mcbf.pw:11002
@@ -163,6 +168,7 @@ pbmystic.rdfig.net:24
 perceptronica.duckdns.org:10100
 perceptronica.duckdns.org:10052
 picovebbs.com:6860
+playdecay.com:3003
 prahy.mmh.cz:3333
 queerandloathing.com:8888
 retro-bar.net:1981
@@ -180,6 +186,7 @@ selonia.zapto.org:2023
 shell-matrix.net:2223
 shodanscore.com:11235
 sirionbbs.suphammer.net:9023
+sk-twgs.com:2002
 soznet.net:2123
 splat.duia.us:333
 stateoftheark.ca:1990
