--- a/relay.cfg
+++ b/relay.cfg
@@ -30,6 +30,7 @@ baudgirl.com:2300
 baudgirl.ddns.net:2300
 bbs.bottomlessabyss.net:2023
 bbs.darksoulscrew.tk:1123
+bbs.deepspacegateway.net:2383
 bbs.dmine.net:24
 bbs.docsplace.org:26
 bbs.doszombie.com:9000
@@ -38,6 +39,8 @@ bbs.f4fbbs.com:62323
 bbs.gapbbs.us:5023
 bbs.greyfuzz.com:1023
 bbs.hoyvision.com:6402
+bbs.idbbs.ca:1581
+bbs.idbbs.ca:59
 bbs.keeblers.org:8888
 bbs.micronick.com:1123
 bbs.mywire.org:26
@@ -81,6 +84,7 @@ bnsbbs.ddns.net:23000
 cardandclaw.servebbs.com:8888
 carriersync2.thruhere.net:6912
 carrionfields.net:4449
+caspsabi.ca:2023
 catch22.zapto.org:26
 chinwag.leenooks.net:10023
 chq.ddns.net:2023
@@ -94,6 +98,7 @@ cqbbs.ddne.net:6502
 cqbbs.ddns.net:6502
 cuba.bbs.io:2023
 dangerbaybbs.dyndns.org:1337
+deepspacegateway.net:2383
 digitaldial.homeunix.com:2300
 down-under.net:2003
 dura-bbs.net:6359
@@ -157,6 +162,7 @@ mysticpibbs.ddns.net:53417
 mysticpibbs.ddns.net:53419
 night-runners.org:2474
 nolacarrier.com:504
+opacalypse.ca:6502
 orbitbbs.ddns.net:7210
 otherworldbbs.dyndns.org:6502
 packet.w4bfb.org:2333
@@ -170,7 +176,9 @@ perceptronica.duckdns.org:10052
 picovebbs.com:6860
 playdecay.com:3003
 prahy.mmh.cz:3333
+prostaria.com:22350
 queerandloathing.com:8888
+quipna.com:376
 retro-bar.net:1981
 retrograde.dyndns.org:6502
 retrounderground.org:1337
@@ -195,6 +203,8 @@ strontium90.net:8888
 teaghlach.eu:4400
 teaghlach.eu:6665
 tel.houseofbaud.com:8888
+therockbbs.net:10023
+theunderground.us:10023
 thunder-storm.ca:10023
 tinysbbs.com:2023
 tinysbbs.com:3023
