--- a/relay.cfg
+++ b/relay.cfg
@@ -1,14 +1,18 @@
-﻿23,513,2300,2323,6400
+﻿23,513,2300,2323,6400,6502
 13leader.net:8023
 162.243.24.4:4040
 174.138.109.194:4040
+2.tcp.ngrok.io:17595
+20ForBeers.com:1337
 2ndchoicecore.nz:1024
+404error.ddns.net:2000
 68.56.176.236:8623
 69.51.83.193:1691
 9640news.ddns.net:9640
 a80sappleiibbs.ddns.net:6502
 absinthebbs.net:1940
 acentauribbs.no-ip.org:2002
+aces-eights-bbs.loginto.me:1969
 ah-bbs.com:2335
 alco.bbs.io:2023
 altairbiz.ddns.net:8888
@@ -17,20 +21,38 @@ altairbiz.hopto.org:2222
 altairbiz.hopto.org:2323
 altairbiz.hopto.org:8383
 altairbiz.hopto.org:8888
+altair.virtualaltair.com:4667
 amigahouse.heightspc.net:6505
+amigaunderground.com:2002
+amigaunderground.com:4040
+amis86.ddns.net:9000
 amstrad.simulant.uk:464
 amstrad.simulant.uk:664
 andr01d.zapto.org:9999
 archive.prodata-net.com:2322
 atl.ddns.net:6401
 azlab.ddns.net:6510
+baffa.zapto.org:20248
+balloon.tel:55223
 bardbbs.belthesar.com:25023
+basement.dangerrocket.net:42069
 basementbbs.ddns.net:9000
+baudbbs.eastus.cloudapp.azure.com:6502
 baudgirl.com:2300
 baudgirl.ddns.net:2300
+bbs.8bitboyz.com:6402
+bbs.8bitboyz.com:6502
+bbs.badusers.com:24
+bbs.baud.games:6502
+bbs.baud.games:8088
 bbs.bottomlessabyss.net:2023
+bbs.chookfest.net:6800
+bbs.computerklubben.dk:64
+bbs.cultofjames.org:9023
 bbs.darksoulscrew.tk:1123
 bbs.deepspacegateway.net:2383
+bbs.deepspacegateway.net:2523
+bbs.deepthoughtbbs.com:4242
 bbs.dmine.net:24
 bbs.docsplace.org:26
 bbs.doszombie.com:9000
@@ -38,10 +60,13 @@ bbs.doszombie.com:9010
 bbs.f4fbbs.com:62323
 bbs.gapbbs.us:5023
 bbs.greyfuzz.com:1023
+bbs.hobbitempire.net:6501
+bbs.hooplesbbs.net:8023
 bbs.hoyvision.com:6402
 bbs.idbbs.ca:1581
 bbs.idbbs.ca:59
 bbs.keeblers.org:8888
+bbs.lu1dbq.org:6300
 bbs.micronick.com:1123
 bbs.mywire.org:26
 bbs.mywire.org:2400
@@ -51,19 +76,26 @@ bbs.outpostbbs.net:10123
 bbs.razorsdomain.com:23230
 bbs.razorsdomain.com:31415
 bbs.riddells.net:10023
+bbs.riddells.net:10024
 bbs.ruge.ws:2223
+bbs.studio64.hu:1212
 bbs.sysop.se:8888
 bbs.tabakov.net:13023
 bbs.techware2k.com:24
 bbs.thenet.gen.nz:2324
 bbs.thenexusbbs.com:2002
 bbs.thenexusbbs.com:31337
+bbs.thepotogold.net:4888
 bbs.thewelborns.net:28
+bbs.unfufadoo.net:23000
 bbs.valhallabbs.com:24
+bbs.valhallabbs.com:26
 bbs.valhallabbs.com:5023
 bbs.vaporsnail.com:1123
 bbs.vdrive.ca:8023
 bbs.wccastle.net:2424
+bbs.winserver.com:24
+bbs83.online:1983
 bbs1.tonyuk.online:2424
 bc.kelotz.net:1981
 bc.kelotz.net:1985
@@ -78,9 +110,12 @@ bc.kelotz.net:2223
 bc.kelotz.net:2224
 bc.kelotz.net:2225
 bcrgames.com:31337
+bikerworldbbs.loginto.me:1969
+binarypibbs.ddns.net:53412
 blackflag.acid.org:28
 blacklodgeresearch.org:4023
 bnsbbs.ddns.net:23000
+canadianrebel.sytes.net:1981
 cardandclaw.servebbs.com:8888
 carriersync2.thruhere.net:6912
 carrionfields.net:4449
@@ -88,20 +123,30 @@ caspsabi.ca:2023
 catch22.zapto.org:26
 chinwag.leenooks.net:10023
 chq.ddns.net:2023
+chqbbs.ddns.net:2023 
+chqbbsboardz.ddns.net:2023
 cib.dyndns.org:6405
 cib.dyndns.org:6407
+cliquebbs.hopto.org:2020
 cmrk.net:1986
 cmrk.net:2113
 cnetbbs.dynu.net:1940
 compufuck.xyz:2324
 cqbbs.ddne.net:6502
 cqbbs.ddns.net:6502
+cqbbs.ddns.net:6800
 cuba.bbs.io:2023
 dangerbaybbs.dyndns.org:1337
+darkmists.net:2222
 deepspacegateway.net:2383
+deepspacegateway.net:2523
+demo.winserver.com:24
 digitaldial.homeunix.com:2300
 down-under.net:2003
+dream.5by5.co:3333
+dream.5x5.co:3333
 dura-bbs.net:6359
+ems-bbs.com:24
 encom.cloudns.org:1982
 error1202bbs.ddns.net:1202
 error1202bbs.ddns.net:8080
@@ -112,7 +157,9 @@ error404bbs.com:1202
 error404bbs.com:8080
 everdark.org:3000
 fishingnet.phatstar.org:7777
+fluxcap.synchro.net:5023
 forgottenkingdoms.org:80
+fqbbs.synchro.net:2002
 frontierbbs.net:2023
 frontierbbs.net:2333
 frontierbbs.net:3333
@@ -120,6 +167,7 @@ frontierbbs.net:8888
 fusen.ddns.net:55223
 fusionbbs.ddns.net:9640
 fw2.cnetbbs.net:6800
+grayles.net:4000
 grepper.net:6464
 gusto-bbs.com:2023
 ham.agvnet.com.ar:8011
@@ -128,8 +176,11 @@ ham.agvnet.com.ar:8045
 HB1BBS.NET:8010
 Heatwave.ddns.net:9640
 heightsbbs.heightspc.net:6860
+home.winserver.com:24
+host.baud.games:6502
 hotwirebbs.kicks-ass.net:6502
 igs.joyjoy.net:6969
+inx.ovh:55023
 jayctheriot.com:6400
 jayctheriot.com:6401
 jayctheriot.com:6402
@@ -144,6 +195,7 @@ lightningbbs.com:2401
 furmenservices.net:23232
 furmenservices.net:23322
 madaraszd.net:4321
+marmots.glorioustrainwrecks.com:19999
 mc15.fadehost.com:11001
 mc15.fadehost.com:11002
 mekcity.com:3067
@@ -154,14 +206,19 @@ moenuts.net:2007
 momiabbs.no-ip.info:2002
 mtrek.com:1701
 mud.languiddreams.net:6670
+mud.tamedhon.at:4711
+mud.wolfwings.us:4000
 munk.mynetgear.com:1234
 mutinybbs.com:2332
 mvbbs.dyndns.org:6401
+mysticalmud.org:5000 
 mysticpibbs.ddns.net:53412
 mysticpibbs.ddns.net:53417
 mysticpibbs.ddns.net:53419
+mysticrealms.ddns.net:11000
 night-runners.org:2474
 nolacarrier.com:504
+odysseybbs.ddns.net:8080
 opacalypse.ca:6502
 orbitbbs.ddns.net:7210
 otherworldbbs.dyndns.org:6502
@@ -173,15 +230,25 @@ pc.cnet128.com:6405
 pbmystic.rdfig.net:24
 perceptronica.duckdns.org:10100
 perceptronica.duckdns.org:10052
+phillip.noip.me:1985
+phillip.noip.me:9023
 picovebbs.com:6860
+play.dennismud.xyz:37380
 playdecay.com:3003
 prahy.mmh.cz:3333
 prostaria.com:22350
+psychoticreaction.hopto.org:64128
+pyroto.mysticmountain.us:8086
 queerandloathing.com:8888
 quipna.com:376
+raiders.phatstar.org:1337
+rcpm.mitsaltair.com:8800
+reflections.hopto.org:64128
 retro-bar.net:1981
+retrocave.ddns.net:32
 retrograde.dyndns.org:6502
 retrounderground.org:1337
+rfstudio.mine.nu:2424
 rhostdev.mushpark.com:4201
 rustycraft.sytes.net:4206
 sanctuary.zapto.org:1541
@@ -191,18 +258,31 @@ scbbs.nsupdate.info:50023
 selonia.com:2023
 selonia.com:2513
 selonia.zapto.org:2023
+server.baud.games:8088
+sfcbbs.ddns.net:2223
 shell-matrix.net:2223
 shodanscore.com:11235
 sirionbbs.suphammer.net:9023
 sk-twgs.com:2002
+sol-1.org:51515
+sol.uk.ms:51515
 soznet.net:2123
 splat.duia.us:333
+spotbbs.k9zw.com:1123
 stateoftheark.ca:1990
+stealthworld.tk:2023
+storm-mountain.ddns.net:24000
 stormwolftech.sytes.net:4020
+strangeplanet.org:6800
 strontium90.net:8888
+syndicatelink.servegame.com:2002
 teaghlach.eu:4400
 teaghlach.eu:6665
 tel.houseofbaud.com:8888
+telnet.baduser.net:24
+thedrunkengamer.com:8888
+thekeep.net:9918
+thenorthernpalace.com:2020
 therockbbs.net:10023
 theunderground.us:10023
 thunder-storm.ca:10023
@@ -210,12 +290,19 @@ tinysbbs.com:2023
 tinysbbs.com:3023
 tsali.ddns.net:9023
 tw.spleck.net:2002
+twgs.tw2002.win:2002
+tws.thecrustychicken.com:2500
 tzone.ddns.net:5000
 vintagebbsing.com:1337
 vintagebbsing.com:8888
+volnay.org:8888
+westwoodbbs.net:8888
+wh2.abon.us:2321
+wh2bbs.us:2321
 wildcat.dynu.com:2300
 wildcat.dynu.com:2310
 wildsau.luxh.at:81
+wn2.duckdns.org:3000
 wn2.duckdns.org:6407
 wn2.duckdns.org:6408
 wtlord.lightningbbs.com:57600
