Fix exception when ini file doesn't exist

--- a/relay.cfg
+++ b/relay.cfg
@@ -181,6 +181,7 @@ host.baud.games:6502
 hotwirebbs.kicks-ass.net:6502
 igs.joyjoy.net:6969
 inx.ovh:55023
+itchybutt.net:8888
 jayctheriot.com:6400
 jayctheriot.com:6401
 jayctheriot.com:6402
