Free resources to avoid sockets piling up and the process eventually crashing

--- a/relay.cfg
+++ b/relay.cfg
@@ -4,6 +4,8 @@
 174.138.109.194:4040
 2.tcp.ngrok.io:17595
 20ForBeers.com:1337
+212.162.151.235:2002
+212.162.151.235:4242
 2ndchoicecore.nz:1024
 404error.ddns.net:2000
 68.56.176.236:8623
@@ -30,6 +32,7 @@ amstrad.simulant.uk:464
 amstrad.simulant.uk:664
 andr01d.zapto.org:9999
 archive.prodata-net.com:2322
+arda.phaseblue.org:2600
 atl.ddns.net:6401
 azlab.ddns.net:6510
 baffa.zapto.org:20248
@@ -58,6 +61,7 @@ bbs.docsplace.org:26
 bbs.doszombie.com:9000
 bbs.doszombie.com:9010
 bbs.f4fbbs.com:62323
+bbs.firewelltech.com:12323
 bbs.gapbbs.us:5023
 bbs.greyfuzz.com:1023
 bbs.hobbitempire.net:6501
@@ -71,6 +75,7 @@ bbs.micronick.com:1123
 bbs.mywire.org:26
 bbs.mywire.org:2400
 bbs.nitemarecafe.com:2002
+bbs.outpost9.co:2023
 bbs.outpostbbs.net:2304
 bbs.outpostbbs.net:10123
 bbs.razorsdomain.com:23230
@@ -164,6 +169,7 @@ frontierbbs.net:2023
 frontierbbs.net:2333
 frontierbbs.net:3333
 frontierbbs.net:8888
+furrymuck.com:8888
 fusen.ddns.net:55223
 fusionbbs.ddns.net:9640
 fw2.cnetbbs.net:6800
@@ -180,6 +186,7 @@ home.winserver.com:24
 host.baud.games:6502
 hotwirebbs.kicks-ass.net:6502
 igs.joyjoy.net:6969
+interzone.annexia.xyz:2002
 inx.ovh:55023
 itchybutt.net:8888
 jayctheriot.com:6400
@@ -195,6 +202,8 @@ lightningbbs.com:2400
 lightningbbs.com:2401
 furmenservices.net:23232
 furmenservices.net:23322
+lovelybits.org:1337
+lunaticsunleashed.ddns.net:2333
 madaraszd.net:4321
 marmots.glorioustrainwrecks.com:19999
 mc15.fadehost.com:11001
@@ -204,7 +213,9 @@ metalshopbbs.com:2000
 middleearth.net:4739
 miser.jmr.is:1666
 moenuts.net:2007
+moetiki.ddns.net:27
 momiabbs.no-ip.info:2002
+monero.place:8888
 mtrek.com:1701
 mud.languiddreams.net:6670
 mud.tamedhon.at:4711
@@ -217,6 +228,7 @@ mysticpibbs.ddns.net:53412
 mysticpibbs.ddns.net:53417
 mysticpibbs.ddns.net:53419
 mysticrealms.ddns.net:11000
+n3hym.ddns.net:8010
 night-runners.org:2474
 nolacarrier.com:504
 odysseybbs.ddns.net:8080
@@ -233,12 +245,17 @@ perceptronica.duckdns.org:10100
 perceptronica.duckdns.org:10052
 phillip.noip.me:1985
 phillip.noip.me:9023
+phillip.hopto.org:9023
 picovebbs.com:6860
 play.dennismud.xyz:37380
+play.shardsofempire.com:9999
 playdecay.com:3003
+possessed.duckdns.org:8888
+possumso.fsxnet.nz:7636
 prahy.mmh.cz:3333
 prostaria.com:22350
 psychoticreaction.hopto.org:64128
+publicaccess.club:8888
 pyroto.mysticmountain.us:8086
 queerandloathing.com:8888
 quipna.com:376
@@ -256,6 +273,7 @@ sanctuary.zapto.org:1541
 sandwich.hopto.org:2023
 sbbs.dynu.net:2025
 scbbs.nsupdate.info:50023
+scbbs.nsupdate.info:61023
 selonia.com:2023
 selonia.com:2513
 selonia.zapto.org:2023
@@ -281,6 +299,7 @@ teaghlach.eu:4400
 teaghlach.eu:6665
 tel.houseofbaud.com:8888
 telnet.baduser.net:24
+telnet.mibbs.online:2020
 thedrunkengamer.com:8888
 thekeep.net:9918
 thenorthernpalace.com:2020
@@ -289,6 +308,7 @@ theunderground.us:10023
 thunder-storm.ca:10023
 tinysbbs.com:2023
 tinysbbs.com:3023
+tinysbbs.com:4323
 tsali.ddns.net:9023
 tw.spleck.net:2002
 twgs.tw2002.win:2002
@@ -297,6 +317,8 @@ tzone.ddns.net:5000
 vintagebbsing.com:1337
 vintagebbsing.com:8888
 volnay.org:8888
+vps1.majorbbs.com:2002
+vps1.majorbbs.com:4242
 westwoodbbs.net:8888
 wh2.abon.us:2321
 wh2bbs.us:2321
@@ -306,5 +328,8 @@ wildsau.luxh.at:81
 wn2.duckdns.org:3000
 wn2.duckdns.org:6407
 wn2.duckdns.org:6408
+wn4.wrgnbr.com:3000
+wnbbs.duckdns.org:2300
 wtlord.lightningbbs.com:57600
 www.charliecamilleri.xyz:6666
+[2607:fb90:a907:e29a:8fcb:f793:c8ac:de0]:9023
