Add ignore for start.sh script, which is specific to my public proxies

--- a/fTelnetProxy.csproj
+++ b/fTelnetProxy.csproj
@@ -92,6 +92,9 @@
     <None Include="relay.cfg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="start.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="wss.pfx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
