Update relay file

--- a/relay.cfg
+++ b/relay.cfg
@@ -6,10 +6,14 @@
 20ForBeers.com:1337
 212.162.151.235:2002
 212.162.151.235:4242
+216.250.248.74:6227
+216.250.248.74:9948
 2ndchoicecore.nz:1024
 404error.ddns.net:2000
 68.56.176.236:8623
 69.51.83.193:1691
+73.115.27.237:8888
+77.163.20.156:7411
 9640news.ddns.net:9640
 a80sappleiibbs.ddns.net:6502
 absinthebbs.net:1940
@@ -24,13 +28,16 @@ altairbiz.hopto.org:2323
 altairbiz.hopto.org:8383
 altairbiz.hopto.org:8888
 altair.virtualaltair.com:4667
+altarofwaresbbs.hopto.org:6464
 amigahouse.heightspc.net:6505
 amigaunderground.com:2002
+amigaunderground.com:2300
 amigaunderground.com:4040
 amis86.ddns.net:9000
 amstrad.simulant.uk:464
 amstrad.simulant.uk:664
 andr01d.zapto.org:9999
+antidote.triad.se:64128
 archive.prodata-net.com:2322
 arda.phaseblue.org:2600
 atl.ddns.net:6401
@@ -78,8 +85,11 @@ bbs.nitemarecafe.com:2002
 bbs.outpost9.co:2023
 bbs.outpostbbs.net:2304
 bbs.outpostbbs.net:10123
+bbs.outpostbbs.net:10323
+bbs.pixelgrounds.net:8888
 bbs.razorsdomain.com:23230
 bbs.razorsdomain.com:31415
+bbs.retrohack.se:64128
 bbs.riddells.net:10023
 bbs.riddells.net:10024
 bbs.ruge.ws:2223
@@ -120,12 +130,14 @@ binarypibbs.ddns.net:53412
 blackflag.acid.org:28
 blacklodgeresearch.org:4023
 bnsbbs.ddns.net:23000
+byob.hopto.org:64128
 canadianrebel.sytes.net:1981
 cardandclaw.servebbs.com:8888
 carriersync2.thruhere.net:6912
 carrionfields.net:4449
 caspsabi.ca:2023
 catch22.zapto.org:26
+cement-city.bbs.io:4000
 chinwag.leenooks.net:10023
 chq.ddns.net:2023
 chqbbs.ddns.net:2023 
@@ -140,9 +152,13 @@ compufuck.xyz:2324
 cqbbs.ddne.net:6502
 cqbbs.ddns.net:6502
 cqbbs.ddns.net:6800
+cqnet.dyndns.org:7300
 cuba.bbs.io:2023
 dangerbaybbs.dyndns.org:1337
+darkendlessbbs.hopto.org:6510
+darklevel.hopto.org:64128
 darkmists.net:2222
+deathrow.servebbs.org:1001
 deepspacegateway.net:2383
 deepspacegateway.net:2523
 demo.winserver.com:24
@@ -151,6 +167,7 @@ down-under.net:2003
 dream.5by5.co:3333
 dream.5x5.co:3333
 dura-bbs.net:6359
+dzbbs.hopto.org:64128
 ems-bbs.com:24
 encom.cloudns.org:1982
 error1202bbs.ddns.net:1202
@@ -161,10 +178,13 @@ error404bbs.ddns.net:8080
 error404bbs.com:1202
 error404bbs.com:8080
 everdark.org:3000
+fastline.nu:1541
+fdiv.ath.cx:1987
 fishingnet.phatstar.org:7777
 fluxcap.synchro.net:5023
 forgottenkingdoms.org:80
 fqbbs.synchro.net:2002
+friabad.hopto.org:64128
 frontierbbs.net:2023
 frontierbbs.net:2333
 frontierbbs.net:3333
@@ -233,6 +253,7 @@ night-runners.org:2474
 nolacarrier.com:504
 odysseybbs.ddns.net:8080
 opacalypse.ca:6502
+optical.c64bbs.nu:64128
 orbitbbs.ddns.net:7210
 otherworldbbs.dyndns.org:6502
 packet.w4bfb.org:2333
@@ -243,6 +264,7 @@ pc.cnet128.com:6405
 pbmystic.rdfig.net:24
 perceptronica.duckdns.org:10100
 perceptronica.duckdns.org:10052
+phantasm.bbs.io:4489
 phillip.noip.me:1985
 phillip.noip.me:9023
 phillip.hopto.org:9023
@@ -266,6 +288,7 @@ retro-bar.net:1981
 retrocave.ddns.net:32
 retrograde.dyndns.org:6502
 retrounderground.org:1337
+raveolution.hopto.org:64128
 rfstudio.mine.nu:2424
 rhostdev.mushpark.com:4201
 rustycraft.sytes.net:4206
@@ -282,11 +305,13 @@ sfcbbs.ddns.net:2223
 shell-matrix.net:2223
 shodanscore.com:11235
 sirionbbs.suphammer.net:9023
+skarabrae.zapto.org:31337
 sk-twgs.com:2002
 sol-1.org:51515
 sol.uk.ms:51515
 soznet.net:2123
 splat.duia.us:333
+splatter.haus:666
 spotbbs.k9zw.com:1123
 stateoftheark.ca:1990
 stealthworld.tk:2023
@@ -300,7 +325,9 @@ teaghlach.eu:6665
 tel.houseofbaud.com:8888
 telnet.baduser.net:24
 telnet.mibbs.online:2020
+terminal-obsession.hopto.org:1541
 thedrunkengamer.com:8888
+theedgebbs.dyndns.org:1541
 thekeep.net:9918
 thenorthernpalace.com:2020
 therockbbs.net:10023
@@ -310,6 +337,7 @@ tinysbbs.com:2023
 tinysbbs.com:3023
 tinysbbs.com:4323
 tsali.ddns.net:9023
+tuffy.dyndns.dk:1541
 tw.spleck.net:2002
 twgs.tw2002.win:2002
 tws.thecrustychicken.com:2500
@@ -329,6 +357,7 @@ wn2.duckdns.org:3000
 wn2.duckdns.org:6407
 wn2.duckdns.org:6408
 wn4.wrgnbr.com:3000
+wn6.wrgnbr.com:6411
 wnbbs.duckdns.org:2300
 wtlord.lightningbbs.com:57600
 www.charliecamilleri.xyz:6666
