Add start.sh, and remove reference to two other files that were causing build failures

--- a/fTelnetProxy/relay.cfg
+++ b/fTelnetProxy/relay.cfg
@@ -142,6 +142,7 @@ chinwag.leenooks.net:10023
 chq.ddns.net:2023
 chqbbs.ddns.net:2023 
 chqbbsboardz.ddns.net:2023
+chrysalisbbs.org:8888
 cib.dyndns.org:6405
 cib.dyndns.org:6407
 cliquebbs.hopto.org:2020
