If relaying is enabled, and dialdirectory.xml exists, check it to see if the requested host:port is listed, and allow the connection if so. dialdirectory.xml provided by Telnet BBS Guide

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@ fTelnetProxy/bin/Release/*
 fTelnetProxy/obj/*
 packages/*
 
+dialdirectory.xml
 fTelnetProxy.ini
 rsync-to-proxies.cmd
 rsync-to-proxies-with-wsl.cmd
+telnetbbsguide-downloader.ps1
 *.pfx
 *.suo
 *.user
