--- a/fTelnetProxy/relay.cfg
+++ b/fTelnetProxy/relay.cfg
@@ -137,6 +137,8 @@ carriersync2.thruhere.net:6912
 carrionfields.net:4449
 caspsabi.ca:2023
 catch22.zapto.org:26
+catch22bbs.com:26
+catch22bbs.org:26
 cement-city.bbs.io:4000
 chinwag.leenooks.net:10023
 chq.ddns.net:2023
@@ -190,6 +192,7 @@ frontierbbs.net:2023
 frontierbbs.net:2333
 frontierbbs.net:3333
 frontierbbs.net:8888
+frontiers.dotoran.com:9892
 furrymuck.com:8888
 fusen.ddns.net:55223
 fusionbbs.ddns.net:9640
