--- a/fTelnetProxy/fTelnetProxy.csproj
+++ b/fTelnetProxy/fTelnetProxy.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ProjectInstaller.Designer.cs">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
+    <Compile Include="TelnetBbsGuide.cs" />
     <Compile Include="WebSocketClientThread.cs" />
     <Compile Include="WebSocketServerThread.cs" />
     <Compile Include="Service.cs">
